--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CustomerLoginActivity"></activity>
+        <activity android:name=".SearchAdActivity"></activity>
+        <activity android:name=".CustomerLoginActivity" />
         <activity android:name=".DriverLoginActivity" />
         <activity android:name=".ResidentMapActivity" />
         <!--
@@ -33,12 +34,11 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBjdmsEtYZ0s2l1FN-sKFeeXK2FL_8KOdk"/>
+            android:value="AIzaSyBjdmsEtYZ0s2l1FN-sKFeeXK2FL_8KOdk" />
 
         <activity
             android:name=".DriverMapActivity"
-            android:label="@string/title_activity_driver_map"
-            />
+            android:label="@string/title_activity_driver_map" />
         <activity
             android:name=".SellerMapActivity"
             android:label="@string/title_activity_seller_map" />
