--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     implementation 'com.github.jd-alexander:library:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
